#    git diff <cluster commit id> Changelog
# It is also a good idea to take a look on:
#    yt/server/master/cell_master/serialize.cpp - if the version differs, then the update should be done with master snapshots (+ --set-read-only).
#    yt/server/node/tablet_node/serialize.cpp - if the version differs, then the update should be done with tablet cell recreation.

* ermolovd: Introduce new logical type. Update masters via snapshot.
* ermolovd: Disabled complex types for dynamic tables. Update masters via snapshot.
* renadeen: Added filtering of jobs by job_competition_id. Feel free to update masters without snapshots but update operation archive to version 32.
* ermolovd: Add `type_v3' to schema. Update masters via snapshot.
* ifsmirnov: Do not store tablet and replication errors on master. Update masters via snapshot.
* gritukan: Cypress tree serialization format changed. Update masters via snapshot.
* renadeen: Added new scheduler pool object at master. Update masters via snapshot.
* !IMPORTANT!
*   You can skip migration of old pools (map_nodes) to new scheduler pool objects and everything will work the old way
*       but don't forget to ask renadeen@ to perform migration of this cluster.
*   If you are brave enough to perform migration yourself then good luck.
*   Best time to perform migration - when new masters are up but scheduler is down.
*   1) Become superuser on cluster (necessary to create virtual map nodes)
*   2) Run migration script 'scripts/scheduler/migrate-pools.py --proxy cluster_name' as superuser on cluster.
*   It will reproduce full pool structure at separate location and if succeeds will replace //sys/pool_trees with new virtual map node.
*   Old pool structure will be moved to //sys/pool_trees_bak by default.
*   If an exception is thrown during reconstruction phase old pools will not be touched and scheduler still can work the old way.
*   If migration was done but for some reason you want to switch back to old pools