@@ -6,6 +6,7 @@
 #    yt/server/master/cell_master/serialize.cpp - if the version differs, then the update should be done with master snapshots (+ --set-read-only).
 #    yt/server/node/tablet_node/serialize.cpp - if the version differs, then the update should be done with tablet cell recreation.
 
+* savrus: Added some compatibility code for 19.4 clusters. Please use this version or later for updating a 19.4 cluster.
 * ermolovd: Introduce new logical type. Update masters via snapshot.
 * ermolovd: Disabled complex types for dynamic tables. Update masters via snapshot.
 * renadeen: Added filtering of jobs by job_competition_id. Feel free to update masters without snapshots but update operation archive to version 32.
